--- a/package.json
+++ b/package.json
@@ -3,17 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.1",
+    "@mui/styled-engine": "^6.3.1",
+    "@mui/x-data-grid": "^7.23.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.0.0",
     "apexcharts": "^4.3.0",
+    "file-saver": "^2.0.5",
     "react": "^18.0.0",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
+    "react-data-grid": "^7.0.0-beta.47",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
